Deberta small with temperature scaling

--- a/deberta-base.ipynb
+++ b/deberta-base.ipynb
@@ -2413,6 +2413,157 @@
     "    torch.mps.empty_cache()\n",
     "print(\"Done!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "54b6a847",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: mps\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/transformers/convert_slow_tokenizer.py:564: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
+      "  warnings.warn(\n",
+      "Predicting:   0%|                                                          | 0/1437 [00:00<?, ?it/s]huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "Predicting: 100%|███████████████████████████████████████████████| 1437/1437 [03:45<00:00,  6.38it/s]\n",
+      "Predicting: 100%|█████████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.78it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ Best Temperature: 1.641 | Log-loss: 1.0484\n",
+      "\n",
+      "Saved: submission_deberta_small_calibrated.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, torch, pandas as pd, numpy as np\n",
+    "import torch.nn.functional as F\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "from sklearn.metrics import log_loss\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "from tqdm import tqdm  # progress bar\n",
+    "\n",
+    "# =============================\n",
+    "# 🔧 Config\n",
+    "# =============================\n",
+    "MODEL_NAME = \"microsoft/deberta-v3-small\"\n",
+    "MODEL_DIR  = \"deberta_mps_head/checkpoint-51730\"  # last checkpoint folder\n",
+    "DEVICE = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "print(f\"Using device: {DEVICE}\")\n",
+    "\n",
+    "# =============================\n",
+    "#Load data\n",
+    "# =============================\n",
+    "train = pd.read_csv(\"data/train.csv\")\n",
+    "test  = pd.read_csv(\"data/test.csv\")\n",
+    "\n",
+    "label_map = {\"A\": 0, \"B\": 1, \"Tie\": 2}\n",
+    "train[\"label\"] = (\n",
+    "    train[[\"winner_model_a\", \"winner_model_b\", \"winner_tie\"]]\n",
+    "    .astype(int)\n",
+    "    .idxmax(axis=1)\n",
+    "    .map({\"winner_model_a\": \"A\", \"winner_model_b\": \"B\", \"winner_tie\": \"Tie\"})\n",
+    "    .map(label_map)\n",
+    ")\n",
+    "\n",
+    "# stratified validation split\n",
+    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.1, random_state=42)\n",
+    "_, val_idx = next(sss.split(train, train[\"label\"]))\n",
+    "val_df = train.iloc[val_idx].reset_index(drop=True)\n",
+    "\n",
+    "# =============================\n",
+    "#Tokenization\n",
+    "# =============================\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, local_files_only=True)\n",
+    "SEP = tokenizer.sep_token or \"[SEP]\"\n",
+    "\n",
+    "def pack_row(p, a, b): return f\"{p} {SEP} {a} {SEP} {b}\"\n",
+    "def encode_texts(df):\n",
+    "    texts = [pack_row(p,a,b) for p,a,b in zip(df[\"prompt\"],df[\"response_a\"],df[\"response_b\"])]\n",
+    "    return tokenizer(texts, truncation=True, padding=True, max_length=384, return_tensors=\"pt\")\n",
+    "\n",
+    "val_enc  = encode_texts(val_df)\n",
+    "test_enc = encode_texts(test)\n",
+    "\n",
+    "# =============================\n",
+    "#Load model\n",
+    "# =============================\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(MODEL_DIR, local_files_only=True)\n",
+    "model.to(DEVICE).eval()\n",
+    "\n",
+    "# =============================\n",
+    "#Safe batched prediction\n",
+    "# =============================\n",
+    "def predict_logits(enc, batch_size=4):\n",
+    "    \"\"\"Run inference in small batches to avoid MPS OOM.\"\"\"\n",
+    "    logits_list = []\n",
+    "    total = len(enc[\"input_ids\"])\n",
+    "\n",
+    "    for i in tqdm(range(0, total, batch_size), desc=\"Predicting\", ncols=100):\n",
+    "        batch_input_ids = enc[\"input_ids\"][i:i+batch_size].to(DEVICE)\n",
+    "        batch_attn = enc[\"attention_mask\"][i:i+batch_size].to(DEVICE)\n",
+    "        with torch.no_grad():\n",
+    "            batch_logits = model(batch_input_ids, attention_mask=batch_attn).logits.cpu().numpy()\n",
+    "        logits_list.append(batch_logits)\n",
+    "        torch.mps.empty_cache()  # clear GPU memory after each batch\n",
+    "\n",
+    "    return np.concatenate(logits_list, axis=0)\n",
+    "\n",
+    "# run safely in batches\n",
+    "val_logits  = predict_logits(val_enc, batch_size=4)\n",
+    "test_logits = predict_logits(test_enc, batch_size=4)\n",
+    "\n",
+    "# =============================\n",
+    "#Temperature scaling\n",
+    "# =============================\n",
+    "y_true = val_df[\"label\"].values\n",
+    "best_t, best_loss = 1.0, 999\n",
+    "\n",
+    "for t in np.linspace(0.7, 2.0, 30):\n",
+    "    probs = F.softmax(torch.tensor(val_logits / t), dim=1).numpy()\n",
+    "    loss  = log_loss(y_true, probs)\n",
+    "    if loss < best_loss:\n",
+    "        best_loss, best_t = loss, t\n",
+    "\n",
+    "print(f\"\\n✅ Best Temperature: {best_t:.3f} | Log-loss: {best_loss:.4f}\")\n",
+    "\n",
+    "# =============================\n",
+    "#Save calibrated submission\n",
+    "# =============================\n",
+    "test_probs = F.softmax(torch.tensor(test_logits / best_t), dim=1).numpy()\n",
+    "sub = pd.DataFrame({\n",
+    "    \"id\": test[\"id\"],\n",
+    "    \"winner_model_a\": test_probs[:,0],\n",
+    "    \"winner_model_b\": test_probs[:,1],\n",
+    "    \"winner_tie\":     test_probs[:,2],\n",
+    "})\n",
+    "sub.to_csv(\"submission_deberta_small_calibrated.csv\", index=False)\n",
+    "print(\"\\nSaved: submission_deberta_small_calibrated.csv\")"
+   ]
   }
  ],
  "metadata": {
