Combination code outputs and file

--- a/combination.ipynb
+++ b/combination.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7e34b704",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'What this does:\\n- Loads train.csv (labels + prompt for GroupKFold) and test.csv\\n- Loads per-model OOF train probs and test probs (any subset present)\\n  Expected columns in each predictions file: id, pA, pB, pTie  (probabilities)\\n- Rigorously validates inputs (alignment, ranges, sums, NaNs, class order)\\n- Builds a meta-dataset (concatenate per-model probs + engineered margins/entropy/lengths)\\n- Runs GroupKFold(by prompt) CV with two strategies:\\n    1) Constrained non-negative, sum-to-1 **logit-space** weighted average\\n    2) Multinomial Logistic Regression (stacking) on features\\n  Chooses the strategy with lower mean CV log-loss\\n- Refit on full train, predict test, and write:\\n    runs/<tag>/submission.csv  (id,winner_model_a,winner_model_b,winner_tie)\\n    runs/<tag>/oof_combined.csv\\n    runs/<tag>/cv_report.json\\n    runs/<tag>/blend_config.json\\n- Includes symmetry unit-tests (swap A/B) and tie calibration checks\\n- Gracefully degrades if some model files are missing'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "696ca69b",
    "metadata": {},
    "outputs": [],
@@ -59,25 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6ab7fdb7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\aryad\\AppData\\Local\\Temp\\ipykernel_38608\\2499587871.py:2: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -100,65 +85,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b773ff45",
    "metadata": {},
    "outputs": [],
    "source": [
     "CONFIG = {\n",
-    "    # Required: path to the official data (for labels/prompts and IDs)\n",
-    "    \"train_csv\": \"./data/train.csv\",    # <-- update if different\n",
-    "    \"test_csv\":  \"./data/test.csv\",     # <-- update if different\n",
+    "    \"train_csv\": \"./data/train.csv\",\n",
+    "    \"test_csv\": \"./data/test.csv\",\n",
     "\n",
-    "    # Model artifacts to blend (add/remove freely)\n",
-    "    # Each item can point to train OOF probs and test probs. If missing, it's skipped.\n",
-    "    # File format (CSV): id,pA,pB,pTie (probabilities for A/B/Tie)\n",
     "    \"model_specs\": [\n",
     "        {\n",
-    "            \"name\": \"teacher2_reward\",   # LoRA + RoBERTa reward model\n",
-    "            \"train_path\": \"./reward_teacher_outputs/teacher_logits_train.csv\",\n",
-    "            \"test_path\":  \"./reward_teacher_outputs/teacher_logits_test.csv\",\n",
+    "            \"name\": \"teacher2_reward\",\n",
+    "            \"train_path\": \"./teacher_logits_train.csv\",\n",
+    "            \"test_path\": \"./teacher_logits_test.csv\",\n",
     "        },\n",
-    "        #{\n",
-    "            #\"name\": \"deberta_head_only\",  # DeBERTa submission model\n",
-    "            #\"train_path\": \"./data/train.csv\",\n",
-    "            #\"test_path\":  \"./submission_deberta_head_only.csv\",\n",
-    "        #},\n",
+    "        {\n",
+    "            \"name\": \"deberta_head_only\",\n",
+    "            \"train_path\": None,\n",
+    "            \"test_path\": \"./submission_deberta_small_calibrated.csv\",\n",
+    "        },\n",
     "    ],\n",
     "\n",
-    "    # Where to save all outputs\n",
     "    \"runs_dir\": \"./runs\",\n",
     "\n",
-    "    # CV setup\n",
     "    \"n_folds\": 5,\n",
     "    \"random_state\": 42,\n",
     "\n",
-    "    # Which combiner strategies to evaluate\n",
     "    \"use_weighted_logit_blend\": True,\n",
     "    \"use_stacking_lr\": True,\n",
     "\n",
-    "    # Weighted-blend options\n",
-    "    \"weight_init\": \"equal\",   # \"equal\" | \"prioritized_first\" | \"random\"\n",
+    "    \"weight_init\": \"equal\",\n",
     "    \"weight_opt_max_iter\": 800,\n",
     "    \"weight_opt_tolerance\": 1e-8,\n",
     "\n",
-    "    # Stacking options\n",
-    "    \"stack_use_engineered_features\": True,  # margins, entropy, lengths\n",
+    "    \"stack_use_engineered_features\": True,\n",
     "    \"stack_C\": 2.0,\n",
     "    \"stack_max_iter\": 2000,\n",
     "    \"stack_solver\": \"lbfgs\",\n",
     "\n",
-    "    # Length features: will be computed from raw train/test for extra signals\n",
     "    \"use_length_features\": True,\n",
-    "\n",
-    "    # Safety\n",
     "    \"epsilon\": 1e-9,\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ecda30f8",
    "metadata": {
     "lines_to_next_cell": 1
@@ -179,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f5879bcd",
    "metadata": {},
    "outputs": [],
@@ -189,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7737d12b",
    "metadata": {
     "lines_to_next_cell": 1
@@ -207,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "23032195",
    "metadata": {
     "lines_to_next_cell": 1
@@ -228,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "969a2edc",
    "metadata": {
     "lines_to_next_cell": 1
@@ -241,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a045cdd3",
    "metadata": {
     "lines_to_next_cell": 1
@@ -269,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "19dac0df",
    "metadata": {
     "lines_to_next_cell": 1
@@ -287,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "69342130",
    "metadata": {
     "lines_to_next_cell": 1
@@ -305,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "34733a2e",
    "metadata": {
     "lines_to_next_cell": 1
@@ -319,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "58ee33d3",
    "metadata": {
     "lines_to_next_cell": 1
@@ -333,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "faf445a9",
    "metadata": {
     "lines_to_next_cell": 1
@@ -352,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f88fc4bf",
    "metadata": {},
    "outputs": [],
@@ -363,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "aaf2924b",
    "metadata": {},
    "outputs": [],
@@ -387,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "60d31cd2",
    "metadata": {},
    "outputs": [],
@@ -401,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "671dfe51",
    "metadata": {},
    "outputs": [],
@@ -430,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "eaa95357",
    "metadata": {},
    "outputs": [],
@@ -526,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "ee59af1e",
    "metadata": {},
    "outputs": [],
@@ -545,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "c5000c60",
    "metadata": {},
    "outputs": [],
@@ -726,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "587ec62b",
    "metadata": {},
    "outputs": [],
@@ -797,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "afebdb38",
    "metadata": {},
    "outputs": [],
@@ -820,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "51a9fdfa",
    "metadata": {},
    "outputs": [],
@@ -833,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "718c20e3",
    "metadata": {},
    "outputs": [],
@@ -1054,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "ec037b5b",
    "metadata": {},
    "outputs": [
@@ -1062,24 +1035,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20:36:25] INFO - Run dir: ./runs\\20251106_203625\n",
-      "[20:36:25] INFO - Loading official train/test...\n",
-      "[20:36:27] INFO - Loading model artifacts...\n",
-      "[20:36:27] WARNING - [teacher2_reward] OOF train file not found -> skipping train for this model.\n",
-      "[20:36:27] WARNING - [teacher2_reward] test file not found -> skipping test for this model.\n",
-      "[20:36:27] WARNING - Skipping model 'teacher2_reward' (no files found).\n"
+      "[22:21:58] INFO - Run dir: ./runs/20251112_222158\n",
+      "[22:21:58] INFO - Loading official train/test...\n",
+      "[22:22:00] INFO - Loading model artifacts...\n",
+      "[22:22:00] WARNING - [deberta_head_only] OOF train file not found -> skipping train for this model.\n",
+      "[22:22:00] INFO - Building meta features...\n",
+      "[22:22:00] INFO - Models available for blending: ['teacher2_reward']\n",
+      "[22:22:00] INFO - Creating GroupKFold(n=5) splits by prompt...\n",
+      "[22:22:00] INFO - ==> Strategy: Weighted Logit Blend (logit-space)\n",
+      "[22:22:00] INFO - ==> Strategy: Stacking (Multinomial Logistic Regression)\n"
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "No model predictions found. Add at least one to CONFIG['model_specs'].",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[27]\u001b[39m\u001b[32m, line 44\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     41\u001b[39m         logging.warning(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSkipping model \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mspec[\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m (no files found).\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     43\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(preds_list) == \u001b[32m0\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m44\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNo model predictions found. Add at least one to CONFIG[\u001b[39m\u001b[33m'\u001b[39m\u001b[33mmodel_specs\u001b[39m\u001b[33m'\u001b[39m\u001b[33m].\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     46\u001b[39m \u001b[38;5;66;03m# Build features\u001b[39;00m\n\u001b[32m     47\u001b[39m logging.info(\u001b[33m\"\u001b[39m\u001b[33mBuilding meta features...\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mRuntimeError\u001b[39m: No model predictions found. Add at least one to CONFIG['model_specs']."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1272: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.8. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1272: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.8. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1272: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.8. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1272: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.8. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1272: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.8. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:1272: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.8. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22:22:02] INFO - Best strategy: stacking_lr (mean CV log-loss=1.032414)\n",
+      "[22:22:02] INFO - Tie rate (true): 0.3090 | (pred OOF): 0.2798\n",
+      "[22:22:02] INFO - Saved OOF combined -> ./runs/20251112_222158/oof_combined.csv\n",
+      "[22:22:02] INFO - Saved CV report -> ./runs/20251112_222158/cv_report.json\n",
+      "[22:22:02] INFO - Saved blend config -> ./runs/20251112_222158/blend_config.json\n",
+      "[22:22:02] INFO - Saved submission -> ./runs/20251112_222158/submission.csv\n",
+      "[22:22:02] INFO - [Symmetry check] Skipped strict swap test for stacking (engineered feats not rebuilt).\n",
+      "[22:22:02] INFO - Done.\n"
      ]
     }
    ],
@@ -1109,7 +1105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
