updated combination + submission.csv + deberta oof train

--- a/combination.ipynb
+++ b/combination.ipynb
@@ -90,6 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "CONFIG = {\n",
     "    \"train_csv\": \"./data/train.csv\",\n",
     "    \"test_csv\": \"./data/test.csv\",\n",
@@ -126,6 +127,48 @@
     "\n",
     "    \"use_length_features\": True,\n",
     "    \"epsilon\": 1e-9,\n",
+    "}\n",
+    "'''\n",
+    "\n",
+    "CONFIG = {\n",
+    "    \"train_csv\": \"./data/train.csv\",\n",
+    "    \"test_csv\": \"./data/test.csv\",\n",
+    "\n",
+    "    \"model_specs\": [\n",
+    "        {\n",
+    "            \"name\": \"teacher2_reward\",\n",
+    "            \"train_path\": \"./teacher_logits_train_improved.csv\",\n",
+    "            \"test_path\": \"./teacher_logits_test_improved.csv\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"deberta_head_only\",\n",
+    "            \"train_path\": \"./deberta_oof_train.csv\",\n",
+    "            \"test_path\": \"./submission_deberta_small_calibrated.csv\",\n",
+    "        },\n",
+    "    ],\n",
+    "\n",
+    "    \"runs_dir\": \"./runs\",\n",
+    "    \"n_folds\": 5,\n",
+    "    \"random_state\": 42,\n",
+    "\n",
+    "    # === blending & feature flags ===\n",
+    "    \"use_length_features\": False,\n",
+    "    \"use_weighted_logit_blend\": True,\n",
+    "    \"use_stacking_lr\": True,\n",
+    "    \"stack_use_engineered_features\": True,\n",
+    "\n",
+    "    # === numeric constants ===\n",
+    "    \"epsilon\": 1e-6,\n",
+    "\n",
+    "    # === optimizer ===\n",
+    "    \"weight_init\": \"equal\",\n",
+    "    \"weight_opt_max_iter\": 800,\n",
+    "    \"weight_opt_tolerance\": 1e-8,\n",
+    "\n",
+    "    # === stacking config ===\n",
+    "    \"stack_C\": 2.0,\n",
+    "    \"stack_max_iter\": 500,   # ✅ newly added\n",
+    "    \"stack_solver\": \"lbfgs\", # ✅ newly added\n",
     "}"
    ]
   },
@@ -379,6 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "def try_load_model_preds(spec: Dict) -> ModelPreds:\n",
     "    name = spec[\"name\"]\n",
     "    tr_path = spec.get(\"train_path\", None)\n",
@@ -397,6 +441,43 @@
     "        te_df = check_prob_frame(te_df, f\"{name}::test\")\n",
     "    else:\n",
     "        logging.warning(f\"[{name}] test file not found -> skipping test for this model.\")\n",
+    "\n",
+    "    return ModelPreds(name=name, train=tr_df, test=te_df)'''\n",
+    "\n",
+    "def try_load_model_preds(spec: Dict) -> ModelPreds:\n",
+    "    name = spec[\"name\"]\n",
+    "    tr_path = spec.get(\"train_path\", None)\n",
+    "    te_path = spec.get(\"test_path\", None)\n",
+    "\n",
+    "    tr_df = None\n",
+    "    te_df = None\n",
+    "\n",
+    "    if tr_path and os.path.exists(tr_path):\n",
+    "        tr_df = pd.read_csv(tr_path)\n",
+    "    else:\n",
+    "        logging.warning(f\"[{name}] OOF train file not found -> skipping train for this model.\")\n",
+    "\n",
+    "    if te_path and os.path.exists(te_path):\n",
+    "        te_df = pd.read_csv(te_path)\n",
+    "    else:\n",
+    "        logging.warning(f\"[{name}] test file not found -> skipping test for this model.\")\n",
+    "\n",
+    "    #Standardize column names so DeBERTa submissions work\n",
+    "    rename_map = {\n",
+    "        \"winner_model_a\": \"pA\",\n",
+    "        \"winner_model_b\": \"pB\",\n",
+    "        \"winner_tie\": \"pTie\"\n",
+    "    }\n",
+    "    if tr_df is not None:\n",
+    "        tr_df.rename(columns=rename_map, inplace=True)\n",
+    "    if te_df is not None:\n",
+    "        te_df.rename(columns=rename_map, inplace=True)\n",
+    "\n",
+    "    # Run safety checks if applicable\n",
+    "    if tr_df is not None:\n",
+    "        tr_df = check_prob_frame(tr_df, f\"{name}::train\")\n",
+    "    if te_df is not None:\n",
+    "        te_df = check_prob_frame(te_df, f\"{name}::test\")\n",
     "\n",
     "    return ModelPreds(name=name, train=tr_df, test=te_df)"
    ]
@@ -1035,15 +1116,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[22:21:58] INFO - Run dir: ./runs/20251112_222158\n",
-      "[22:21:58] INFO - Loading official train/test...\n",
-      "[22:22:00] INFO - Loading model artifacts...\n",
-      "[22:22:00] WARNING - [deberta_head_only] OOF train file not found -> skipping train for this model.\n",
-      "[22:22:00] INFO - Building meta features...\n",
-      "[22:22:00] INFO - Models available for blending: ['teacher2_reward']\n",
-      "[22:22:00] INFO - Creating GroupKFold(n=5) splits by prompt...\n",
-      "[22:22:00] INFO - ==> Strategy: Weighted Logit Blend (logit-space)\n",
-      "[22:22:00] INFO - ==> Strategy: Stacking (Multinomial Logistic Regression)\n"
+      "[02:18:59] INFO - Run dir: ./runs/20251113_021859\n",
+      "[02:18:59] INFO - Loading official train/test...\n",
+      "[02:19:01] INFO - Loading model artifacts...\n",
+      "[02:19:01] INFO - Building meta features...\n",
+      "[02:19:01] INFO - Models available for blending: ['teacher2_reward', 'deberta_head_only']\n",
+      "[02:19:01] INFO - Creating GroupKFold(n=5) splits by prompt...\n",
+      "[02:19:01] INFO - ==> Strategy: Weighted Logit Blend (logit-space)\n",
+      "[02:19:02] INFO - ==> Strategy: Stacking (Multinomial Logistic Regression)\n"
      ]
     },
     {
@@ -1068,19 +1148,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[22:22:02] INFO - Best strategy: stacking_lr (mean CV log-loss=1.032414)\n",
-      "[22:22:02] INFO - Tie rate (true): 0.3090 | (pred OOF): 0.2798\n",
-      "[22:22:02] INFO - Saved OOF combined -> ./runs/20251112_222158/oof_combined.csv\n",
-      "[22:22:02] INFO - Saved CV report -> ./runs/20251112_222158/cv_report.json\n",
-      "[22:22:02] INFO - Saved blend config -> ./runs/20251112_222158/blend_config.json\n",
-      "[22:22:02] INFO - Saved submission -> ./runs/20251112_222158/submission.csv\n",
-      "[22:22:02] INFO - [Symmetry check] Skipped strict swap test for stacking (engineered feats not rebuilt).\n",
-      "[22:22:02] INFO - Done.\n"
+      "[02:19:04] INFO - Best strategy: stacking_lr (mean CV log-loss=1.005790)\n",
+      "[02:19:04] INFO - Tie rate (true): 0.3090 | (pred OOF): 0.2435\n",
+      "[02:19:04] INFO - Saved OOF combined -> ./runs/20251113_021859/oof_combined.csv\n",
+      "[02:19:04] INFO - Saved CV report -> ./runs/20251113_021859/cv_report.json\n",
+      "[02:19:04] INFO - Saved blend config -> ./runs/20251113_021859/blend_config.json\n",
+      "[02:19:04] INFO - Saved submission -> ./runs/20251113_021859/submission.csv\n",
+      "[02:19:04] INFO - [Symmetry check] Skipped strict swap test for stacking (engineered feats not rebuilt).\n",
+      "[02:19:04] INFO - Done.\n"
      ]
     }
    ],
    "source": [
     "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "52fe17d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission shape: (3, 4)\n",
+      "        id  winner_model_a  winner_model_b  winner_tie\n",
+      "0   136060        0.329364        0.276053    0.394583\n",
+      "1   211333        0.292047        0.410935    0.297018\n",
+      "2  1233961        0.204762        0.454993    0.340245\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the generated submission file\n",
+    "df = pd.read_csv(\"runs/20251113_021859/submission.csv\")\n",
+    "\n",
+    "# Print its shape and a few sample rows\n",
+    "print(\"Submission shape:\", df.shape)\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9631a01a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train               : (57477, 9)\n",
+      "test                : (3, 4)\n",
+      "teacher_train       : (57477, 5)\n",
+      "teacher_test        : (3, 4)\n",
+      "deberta_train       : (57477, 5)\n",
+      "deberta_test        : (3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# check all key files used in CONFIG\n",
+    "files = {\n",
+    "    \"train\": \"./data/train.csv\",\n",
+    "    \"test\": \"./data/test.csv\",\n",
+    "    \"teacher_train\": \"./teacher_logits_train_improved.csv\",\n",
+    "    \"teacher_test\": \"./teacher_logits_test_improved.csv\",\n",
+    "    \"deberta_train\": \"./deberta_oof_train.csv\",\n",
+    "    \"deberta_test\": \"./submission_deberta_small_calibrated.csv\",\n",
+    "}\n",
+    "\n",
+    "for name, path in files.items():\n",
+    "    try:\n",
+    "        df = pd.read_csv(path)\n",
+    "        print(f\"{name:20s}: {df.shape}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"{name:20s}: ERROR → {e}\")"
    ]
   }
  ],
