--- a/deberta-base.ipynb
+++ b/deberta-base.ipynb
@@ -2564,6 +2564,173 @@
     "sub.to_csv(\"submission_deberta_small_calibrated.csv\", index=False)\n",
     "print(\"\\nSaved: submission_deberta_small_calibrated.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c260ff6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/transformers/convert_slow_tokenizer.py:564: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fold 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Predicting:   0%|          | 0/2874 [00:00<?, ?it/s]huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "Predicting: 100%|██████████| 2874/2874 [06:42<00:00,  7.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fold 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Predicting: 100%|██████████| 2874/2874 [06:42<00:00,  7.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fold 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Predicting: 100%|██████████| 2874/2874 [06:42<00:00,  7.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fold 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Predicting: 100%|██████████| 2874/2874 [06:42<00:00,  7.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fold 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Predicting: 100%|██████████| 2874/2874 [06:41<00:00,  7.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved deberta_oof_train.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, torch, pandas as pd, numpy as np\n",
+    "import torch.nn.functional as F\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "MODEL_NAME = \"microsoft/deberta-v3-small\"\n",
+    "MODEL_DIR  = \"deberta_mps_head/checkpoint-51730\"\n",
+    "DEVICE = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "\n",
+    "train = pd.read_csv(\"data/train.csv\")\n",
+    "label_map = {\"A\": 0, \"B\": 1, \"Tie\": 2}\n",
+    "train[\"label\"] = (\n",
+    "    train[[\"winner_model_a\",\"winner_model_b\",\"winner_tie\"]]\n",
+    "    .astype(int)\n",
+    "    .idxmax(axis=1)\n",
+    "    .map({\"winner_model_a\":\"A\",\"winner_model_b\":\"B\",\"winner_tie\":\"Tie\"})\n",
+    "    .map(label_map)\n",
+    ")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, local_files_only=True)\n",
+    "SEP = tokenizer.sep_token or \"[SEP]\"\n",
+    "def pack_row(p,a,b): return f\"{p} {SEP} {a} {SEP} {b}\"\n",
+    "def encode_texts(df):\n",
+    "    texts = [pack_row(p,a,b) for p,a,b in zip(df[\"prompt\"],df[\"response_a\"],df[\"response_b\"])]\n",
+    "    return tokenizer(texts, truncation=True, padding=True, max_length=384, return_tensors=\"pt\")\n",
+    "\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(MODEL_DIR, local_files_only=True)\n",
+    "model.to(DEVICE).eval()\n",
+    "\n",
+    "def predict_logits(enc, batch_size=4):\n",
+    "    logits_list = []\n",
+    "    for i in tqdm(range(0, len(enc[\"input_ids\"]), batch_size), desc=\"Predicting\"):\n",
+    "        with torch.no_grad():\n",
+    "            logits = model(\n",
+    "                enc[\"input_ids\"][i:i+batch_size].to(DEVICE),\n",
+    "                attention_mask=enc[\"attention_mask\"][i:i+batch_size].to(DEVICE)\n",
+    "            ).logits.cpu().numpy()\n",
+    "        logits_list.append(logits)\n",
+    "    return np.concatenate(logits_list)\n",
+    "\n",
+    "# === Stratified K-fold ===\n",
+    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "all_preds = np.zeros((len(train), 3))\n",
+    "\n",
+    "for fold, (train_idx, val_idx) in enumerate(skf.split(train, train[\"label\"])):\n",
+    "    print(f\"\\nFold {fold+1}\")\n",
+    "    val_df = train.iloc[val_idx].reset_index(drop=True)\n",
+    "    val_enc = encode_texts(val_df)\n",
+    "    val_logits = predict_logits(val_enc)\n",
+    "    val_probs = F.softmax(torch.tensor(val_logits), dim=1).numpy()\n",
+    "    all_preds[val_idx] = val_probs\n",
+    "\n",
+    "# === Save the OOF ===\n",
+    "oof = pd.DataFrame({\n",
+    "    \"id\": train[\"id\"],\n",
+    "    \"pA\": all_preds[:,0],\n",
+    "    \"pB\": all_preds[:,1],\n",
+    "    \"pTie\": all_preds[:,2],\n",
+    "    \"label\": train[\"label\"]\n",
+    "})\n",
+    "oof.to_csv(\"deberta_oof_train.csv\", index=False)\n",
+    "print(\"Saved deberta_oof_train.csv\")"
+   ]
   }
  ],
  "metadata": {
